mdapipkg/objects/Symptom_Log__c/fields/Cycle_Record__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Record</label>
    <referenceTo>Cycle_Record__c</referenceTo>
    <relationshipLabel>Symptom Logs</relationshipLabel>
    <relationshipName>Symptom_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>