mdapipkg/objects/Symptom_Log__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Symptom Logs</relationshipLabel>
    <relationshipName>Symptom_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>