mdapipkg/objects/Symptom_Log__c/validationRules/Symptom_Date_Within_Cycle.validationRule-meta.xml
<ValidationRule>
    <fullName>Symptom_Date_Within_Cycle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Cycle_Record__c ) ),
  NOT( ISBLANK( Date__c ) ),
  NOT( ISBLANK( Cycle_Record__r.Start_Date__c ) ),
  NOT( ISBLANK( Cycle_Record__r.End_Date__c ) ),
  OR(
    Date__c &lt; Cycle_Record__r.Start_Date__c,
    Date__c &gt; Cycle_Record__r.End_Date__c
  )
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Symptom Date must fall within the Cycle Record period.</errorMessage>
</ValidationRule>